--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.5",
+    "@types/jest": "^29.5.14",
     "@types/node": "20.6.3",
+    "aws-cdk": "^2.1010.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "aws-cdk": "2.99.1",
-    "ts-node": "^10.9.1",
+    "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
     "typescript": "~5.2.2"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.99.1",
-    "constructs": "^10.0.0",
+    "aws-cdk-lib": "^2.190.0",
+    "constructs": "^10.4.2",
     "source-map-support": "^0.5.21"
   }
 }
