--- a/package.json
+++ b/package.json
@@ -8,18 +8,22 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "fmt": "prettier --write ./lib ./bin"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "20.6.3",
     "aws-cdk": "^2.1010.0",
     "jest": "^29.7.0",
+    "prettier": "^3.5.3",
     "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "typescript": "~5.2.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-glue-alpha": "2.190.0-alpha.0",
+    "@aws-cdk/aws-s3tables-alpha": "2.190.0-alpha.0",
     "aws-cdk-lib": "^2.190.0",
     "constructs": "^10.4.2",
     "source-map-support": "^0.5.21"
